--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 		<link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT&display=swap" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
 	</head>
-	<body>
+	<body class = "wrapper">
 		
 			
-			
+			<p> <i> "when you see this, just know I am trying my best" (and you are too)</i> 
+	
 				<div class="content__text"><span class="content__text-inner">farfrom</span></div>
 			
 
