--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body class = "wrapper">
 		
 			
-			<p> <i> $1028161c10279</i> 
+			<p> <i> cash app $1028161c10279</i> 
 	
 				<div class="content__text"><span class="content__text-inner">farfrom</span></div>
 			
