--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body class = "wrapper">
 		
 			
-			<p> <i> cash app $1028161c10279</i> 
+			<p> <i> i lost my backpack with my diploma in it. Please contact me 401-952-8010 by text. Please, omg. Thank you.</i> 
 	
 				<div class="content__text"><span class="content__text-inner">farfrom</span></div>
 			
