--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			
 			<p> <i> </i> 
 	
-				<div class="content__text"><span class="content__text-inner">farfrom</span></div>
+				<div class="content__text"><span class="content__text-inner">blacklivesmatter</span></div>
 			
 
 		<script src="js/blotter.min.js"></script>
