--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 		<link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT&display=swap" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
 	</head>
-	<body class = "wrapper">
+	<body class = "wrapper" >
 		
 			
 			<p> <i> </i> 
-	
+	<style>
+		body {
+			background-color: red;
+			background-color: color(display-p3 1 0 0 / 1);
+		}
+				</style>
 				<div class="content__text"><span class="content__text-inner">black lives matter</span></div>
 			
 
