--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
 			background-color: red;
 			background-color: color(display-p3 1 0 0 / 1);
 		}
+		.black{
+			
+			color: color(display-p3 1 1 0 / 1);
+			
+		}
 				</style>
-				<div class="content__text"><span class="content__text-inner">black lives matter</span></div>
+				<div class="content__text"><span class="content__text-inner black">black lives matter</span></div>
 			
 
 		<script src="js/blotter.min.js"></script>
