--- a/index.html
+++ b/index.html
@@ -23,15 +23,9 @@
 			
 		}
 				</style>
+					<p class="black"> 彼らは一晩中飲んで歌って踊った ---- に忠誠心を感じている </p>
 				<div class="content__text"><span class="content__text-inner black">black lives matter</span></div>
-		<p class="black">
-		
-		彼らは一晩中飲んで歌って踊った
-
-"or"
-
-に忠誠心を感じている
-		</p>
+	
 			
 
 		<script src="js/blotter.min.js"></script>
