--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			
 		}
 				</style>
-					<p class="black"> 彼らは一晩中飲んで歌って踊った ---- に忠誠心を感じている ... تم إنشاؤها بواسطة الذكاء الاصطناعي </p>
+					<p class="black"> 彼らは一晩中飲んで歌って踊った ---- に忠誠心を感じている ... made by a 23 year old "schizophrenia" boy </p>
 				<div class="content__text"><span class="content__text-inner black">black lives matter</span></div>
 	
 			
